# playlist-app

./: app.py  forms.py  logfile  models.py  pyproject.toml  readme.md  requirements.txt
templates/: add_song_to_playlist.html  base.html  new_playlist.html  new_song.html  playlist.html  playlists.html  song.html  songs.html
